# performax

./: README.md  main.py  pyproject.toml
examples/: console_logger.py  csv_logger.py  device_profile.py  device_profiling.py  file_logger.py  json_logger.py  markdown_logger.py  plain_logger.py  profile.py  rich_logger.py  warmup_profile.py  warmup_profiling.py
performax/: __init__.py  decorators.py  device.py  exceptions.py  logger.py  parser.py  profiler.py  result.py
performax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  test_decorators.py  test_device_parser.py  test_device_profile.py  test_exceptions.py  test_logger.py  test_parser.py  test_profiler.py  test_result.py
